# rust_api_diesel_storage

./: .env  Cargo.toml  README.md  diesel.toml  info.txt  task_manager.db  test_cors.html
migrations/2025-08-01-070406_create_tasks/: down.sql  up.sql
src/: main.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/schema/: mod.rs
