[package]
name = "rust_book_store_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] } # or "postgres" if using Postgres
dotenvy = "0.15" # For .env support
uuid = { version = "1", features = ["v4"] }
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.7"
